[metadata]
name = blueprint
version = 0.0.1
author = Giacomo Furlan
author_email = opensource@giacomofurlan.name
description = Graphical flow functional application development: GUI and runner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elegos/blueprint
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development
keywords = flow, gui, engine

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyyaml
python_requires = >=3.9

[options.extras_require]
gui =
    pyside6

[options.entry_points]
console_scripts =
    blueprint-gui = blueprint.bin.gui:main
    blueprint-scanner = blueprint.bin.scanner:main

[options.packages.find]
where = src
